# wasm-gerber-viewer

./: .gitignore  README.kr.md  README.md  README.zh-Hans.md  README.zh-Hant.md  index.html  vercel.json
css/: style.css
demo/: font-test.gbr  gerber-feature-test.gbr  performance-test-100K_stars.gbr  performance-test-10K_stars.gbr  performance-test-region-72K.gbr  performance-test-stars-100K.gbr  performance-test-stars-1K.gbr  smoke-test.drl
wasm/: Cargo.toml  LICENSE  README.md  rust-pipeline.md
wasm/src/: drill.rs  interaction.rs  lib.rs  odb.rs  parse_common.rs  parser.rs  region.rs  renderer.rs  shape.rs  tests.rs  util.rs
wasm/src/drill/: mod.rs  tests.rs
wasm/src/geometry/: mod.rs  shape.rs
wasm/src/interaction/: mod.rs  tests.rs
wasm/src/odb/: geometry.rs  model.rs  parser.rs
wasm/src/parser/: aperture.rs  aperture_macro.rs  common.rs  geometry.rs  mod.rs  state.rs  tests.rs
wasm/src/parser/common/: tests.rs
wasm/src/parser/geometry/: tests.rs
wasm/src/renderer/: buffer.rs  camera.rs  mod.rs  shader.rs  tests.rs
wasm/src/renderer/camera/: tests.rs
wasm/src/renderer/shaders/: arc.frag.glsl  arc.vert.glsl  circle.frag.glsl  circle.vert.glsl  circle_holed.frag.glsl  circle_holed.vert.glsl  highlight.frag.glsl  highlight.vert.glsl  highlight_stencil.frag.glsl  line.frag.glsl  line.vert.glsl  path_sector.frag.glsl  path_sector.vert.glsl  path_solid.vert.glsl  texture.frag.glsl  texture.vert.glsl  thermal.frag.glsl  thermal.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  triangle_template.vert.glsl
wasm/src/util/: mod.rs  tests.rs
(+34 files in other folders)
