[package]
name = "wasm_gerber_processor"
version = "0.1.0"
edition = "2021"
description = "WASM/WebGL2 Gerber file viewer for PCB visualization"
repository = "https://github.com/dsafdsaf132/wasm-gerber-viewer"
homepage = "https://wasm-gerber-viewer.vercel.app/"
license = "MIT"

[lints.clippy]
too_many_arguments = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
i_triangle = "^0.38.0"
i_overlay = "~4.1.1"
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlRenderbuffer",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "HtmlCanvasElement",
    "console",
] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
debug = false
